# objdetmet

./: .gitignore  README.md  objdetmet.code-workspace  objdetmet.py  objdetmet_no_class.py  objdetmet_simple.py  pyproject.toml
objdetmet/: annotations.py  utils.py
tests/: annotations_test.py
