[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "objdetmet_mbrozzo"
version = "0.0.1"
authors = [
  { name="Mattia Brozzo", email="mbrozzo@gmail.com" },
]
description = "A package to calculate object detection metrics."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mbrozzo/objdetmet"
"Bug Tracker" = "https://github.com/mbrozzo/objdetmet/issues"